--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dialogflow AI Avatar Test App</title>
   <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Orbitron', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #1e1f29; /* Deepfunding's color */
+      background: linear-gradient(135deg, #1e1f29 0%, #2a2a4a 100%); /* Deepfunding's color with gradient */
       color: #e0e0e0;
       display: flex;
       flex-direction: column;
@@ -21,70 +22,88 @@
     .container {
       text-align: center;
       padding: 20px;
-      background-color: #2e2f3a; /* Slightly lighter shade to complement #1e1f29 */
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 255, 255, 0.2); /* Neon glow effect */
+      background: rgba(255, 255, 255, 0.1); /* Glassmorphism effect */
+      backdrop-filter: blur(10px);
+      border-radius: 12px;
+      box-shadow: 0 8px 32px rgba(0, 255, 255, 0.2);
       max-width: 600px;
       width: 90%;
+      border: 1px solid rgba(255, 255, 255, 0.2);
     }
     h1 {
-      color: #00d4ff; /* Neon cyan for AI aesthetic */
+      color: #00d4ff; /* Neon cyan */
       margin-bottom: 20px;
-      text-shadow: 0 0 5px #00d4ff;
+      text-shadow: 0 0 10px #00d4ff, 0 0 20px #ff00ff; /* Dual neon glow */
+      font-weight: 700;
     }
     p {
       color: #b0b0cc;
+      font-weight: 400;
     }
     .warning {
-      background-color: #ff4d4d;
+      background: linear-gradient(90deg, #ff4d4d, #ff6666);
       color: #fff;
       padding: 10px;
       border-radius: 5px;
       margin: 10px 0;
       display: none;
+      box-shadow: 0 0 10px #ff4d4d;
     }
     df-messenger {
       z-index: 999;
       position: fixed;
-      --df-messenger-font-color: #000000; /* Black text for high contrast */
-      --df-messenger-font-family: 'Roboto', sans-serif; /* Modern, techy font */
-      --df-messenger-chat-background: #e0f7ff; /* Light cyan chat window for visibility */
-      --df-messenger-message-user-background: #007acc; /* Darker blue for user messages */
-      --df-messenger-message-bot-background: #ffffff; /* White for bot messages */
-      --df-messenger-button-titlebar-color: #00d4ff; /* Neon titlebar */
+      --df-messenger-font-color: #000000; /* Black text for contrast */
+      --df-messenger-font-family: 'Orbitron', sans-serif; /* Futuristic font */
+      --df-messenger-chat-background: rgba(224, 247, 255, 0.2); /* Glassmorphism chat window */
+      --df-messenger-message-user-background: linear-gradient(90deg, #007acc, #00d4ff); /* Gradient user messages */
+      --df-messenger-message-bot-background: rgba(255, 255, 255, 0.9); /* Semi-transparent white for bot */
+      --df-messenger-button-titlebar-color: linear-gradient(90deg, #00d4ff, #ff00ff); /* Neon gradient titlebar */
       --df-messenger-button-titlebar-font-color: #000;
-      --df-messenger-input-background: #ffffff; /* White input background */
+      --df-messenger-input-background: rgba(255, 255, 255, 0.9); /* White input with slight transparency */
       --df-messenger-input-font-color: #000000; /* Black input text */
-      bottom: 16px;
-      right: 16px;
+      bottom: 24px;
+      right: 24px;
     }
     df-messenger-chat-bubble {
       --df-messenger-chat-bubble-icon: url('https://via.placeholder.com/40?text=AI'); /* Replace with your AI avatar image URL */
-      --df-messenger-chat-bubble-background: #00d4ff; /* Neon bubble background */
-      border-radius: 50%; /* Circular for avatar look */
-      animation: pulse 2s infinite; /* Pulsing animation for AI effect */
+      --df-messenger-chat-bubble-background: linear-gradient(135deg, #00d4ff, #ff00ff); /* Neon gradient */
+      border-radius: 50%;
+      border: 2px solid transparent;
+      background-clip: padding-box;
+      box-shadow: 0 0 15px rgba(0, 212, 255, 0.5), 0 0 25px rgba(255, 0, 255, 0.5);
+      animation: bounce 3s ease-in-out infinite;
     }
-    @keyframes pulse {
-      0% { box-shadow: 0 0 0 0 rgba(0, 212, 255, 0.7); }
-      70% { box-shadow: 0 0 0 10px rgba(0, 212, 255, 0); }
-      100% { box-shadow: 0 0 0 0 rgba(0, 212, 255, 0); }
+    @keyframes bounce {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.1); }
     }
-    /* Override input field styles for better visibility */
+    /* Override input field styles */
     df-messenger::part(input-field) {
-      background-color: #ffffff !important;
+      background: rgba(255, 255, 255, 0.9) !important;
       color: #000000 !important;
-      border: 1px solid #00d4ff !important;
-      border-radius: 4px;
+      border: 2px solid transparent !important;
+      border-radius: 6px;
+      animation: neon-border 2s linear infinite;
     }
     df-messenger::part(input-field)::placeholder {
       color: #666666 !important;
+    }
+    @keyframes neon-border {
+      0% { border-color: #00d4ff; }
+      50% { border-color: #ff00ff; }
+      100% { border-color: #00d4ff; }
+    }
+    /* Hover effect for chat bubble */
+    df-messenger-chat-bubble:hover {
+      transform: scale(1.2);
+      transition: transform 0.3s ease;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Dialogflow AI Avatar Test</h1>
-    <p>Interact with the AI avatar chatbot below to test the integration.</p>
+    <p>Interact with the ultramodern AI avatar chatbot below to test the integration.</p>
     <div id="script-error" class="warning">
       Error: Dialogflow Messenger script failed to load. Check your internet connection or script URL.
     </div>
