--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dialogflow AI Avatar Test App</title>
+  <title>Deep Labs AI Avatar Test App</title>
   <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap">
   <style>
@@ -65,7 +65,7 @@
       right: 24px;
     }
     df-messenger-chat-bubble {
-      --df-messenger-chat-bubble-icon: url('https://via.placeholder.com/40?text=AI'); /* Replace with your AI avatar image URL */
+      --df-messenger-chat-bubble-icon: url('https://media.gettyimages.com/id/1479744575/vector/robot-artificial-intelligence-avatar-icon-profile-diverse-bot-face-for-chatbot-and-social.jpg?s=1024x1024&w=gi&k=20&c=HJ6ZJ__0AZSqU4Nzf7eOu9yhKBDHe8T2YwJOQD1T5IM='); /*('https://via.placeholder.com/40?text=AI');*/ /* Replace with your AI avatar image URL */
       --df-messenger-chat-bubble-background: linear-gradient(135deg, #00d4ff, #ff00ff); /* Neon gradient */
       border-radius: 50%;
       border: 2px solid transparent;
@@ -102,8 +102,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Dialogflow AI Avatar Test</h1>
-    <p>Interact with the ultramodern AI avatar chatbot below to test the integration.</p>
+    <h1>Deep Labs AI Avatar Test</h1>
+    <p>Interact with the ultramodern AI avatar below to test the integration.</p>
     <div id="script-error" class="warning">
       Error: Dialogflow Messenger script failed to load. Check your internet connection or script URL.
     </div>
