--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
       border: 2px solid transparent;
       background-clip: padding-box;
       box-shadow: 0 0 15px rgba(0, 212, 255, 0.5), 0 0 25px rgba(255, 0, 255, 0.5);
-      animation: bounce 3s ease-in-out infinite;
+      animation: pulse 2s infinite; /* Pulsing animation for AI effect */
     }
-    @keyframes bounce {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.1); }
+    @keyframes pulse {
+      0% { box-shadow: 0 0 0 0 rgba(0, 212, 255, 0.7); }
+      70% { box-shadow: 0 0 0 10px rgba(0, 212, 255, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(0, 212, 255, 0); }
     }
     /* Override input field styles */
     df-messenger::part(input-field) {
