--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       border-radius: 50%;
       border: 2px solid transparent;
       background-clip: padding-box;
+      chat-icon: url('https://via.placeholder.com/40?text=AI');
       box-shadow: 0 0 15px rgba(0, 212, 255, 0.5), 0 0 25px rgba(255, 0, 255, 0.5);
       animation: pulse 2s infinite; /* Pulsing animation for AI effect */
     }
