--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
       bottom: 24px;
       right: 24px;
     }
+    df-messenger-chat {
+      bot-writing-text: 'DF is typing...';
+    }
     df-messenger-chat-bubble {
       --df-messenger-chat-bubble-icon: url('https://media.gettyimages.com/id/1479744575/vector/robot-artificial-intelligence-avatar-icon-profile-diverse-bot-face-for-chatbot-and-social.jpg?s=1024x1024&w=gi&k=20&c=HJ6ZJ__0AZSqU4Nzf7eOu9yhKBDHe8T2YwJOQD1T5IM='); /*('https://via.placeholder.com/40?text=AI');*/ /* Replace with your AI avatar image URL */
       --df-messenger-chat-bubble-background: linear-gradient(135deg, #00d4ff, #ff00ff); /* Neon gradient */
       border-radius: 50%;
       border: 2px solid transparent;
       background-clip: padding-box;
-      chat-icon: url('https://via.placeholder.com/40?text=AI');
       box-shadow: 0 0 15px rgba(0, 212, 255, 0.5), 0 0 25px rgba(255, 0, 255, 0.5);
       animation: pulse 2s infinite; /* Pulsing animation for AI effect */
     }
