--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       user-actor-image="">
       <df-messenger-chat-bubble
         chat-title="DF AI Avatar"
-        allow-fullscreen="small">
+        allow-fullscreen="false">
       </df-messenger-chat-bubble>
     </df-messenger-chat>
   </df-messenger>
