--- a/index.html
+++ b/index.html
@@ -116,11 +116,13 @@
     language-code="en"
     max-query-length="-1">
     <df-messenger-chat
-      bot-writing-text="DF is typing..">
-      <df-messenger-chat-bubble
-        chat-title="DF AI Avatar">
-      </df-messenger-chat-bubble>
+      bot-writing-text="DF is typing.."
+      bot-actor-image="https://media.gettyimages.com/id/1479744575/vector/robot-artificial-intelligence-avatar-icon-profile-diverse-bot-face-for-chatbot-and-social.jpg?s=1024x1024&w=gi&k=20&c=HJ6ZJ__0AZSqU4Nzf7eOu9yhKBDHe8T2YwJOQD1T5IM=",
+      user-actor-image="">
     </df-messenger-chat>
+    <df-messenger-chat-bubble
+        chat-title="DF AI Avatar">
+    </df-messenger-chat-bubble>
   </df-messenger>
   <script>
     // Wait for Dialogflow Messenger script to load
