--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       max-width: 600px;
       width: 90%;
       border: 1px solid rgba(255, 255, 255, 0.2);
+      position: relative;
+      z-index: 1;
     }
     h1 {
       color: #00d4ff;
@@ -61,6 +63,7 @@
       --df-messenger-button-titlebar-font-color: #000;
       --df-messenger-input-background: rgba(255, 255, 255, 0.9);
       --df-messenger-input-font-color: #000000;
+      --df-messenger-bot-message-image: url('https://media.gettyimages.com/id/1479744575/vector/robot-artificial-intelligence-avatar-icon-profile-diverse-bot-face-for-chatbot-and-social.jpg?s=1024x1024&w=gi&k=20&c=HJ6ZJ__0AZSqU4Nzf7eOu9yhKBDHe8T2YwJOQD1T5IM='); /* Custom bot image */
       bottom: 24px;
       right: 24px;
     }
@@ -97,7 +100,6 @@
       transform: scale(1.2);
       transition: transform 0.3s ease;
     }
-    /* Hide default chat bubble and ensure chat window is hidden initially */
     df-messenger[chat-icon="off"]::part(chat-bubble) {
       display: none !important;
     }
@@ -120,18 +122,12 @@
     agent-id="44650ad5-68c7-486c-99d5-8e488f2aa761"
     language-code="en"
     max-query-length="-1"
-    chat-icon="off"> <!-- Disable default chat bubble -->
-    <df-messenger-chat
-      bot-writing-text="DF is typing.."
-      bot-actor-image="https://media.gettyimages.com/id/1479744575/vector/robot-artificial-intelligence-avatar-icon-profile-diverse-bot-face-for-chatbot-and-social.jpg?s=1024x1024&w=gi&k=20&c=HJ6ZJ__0AZSqU4Nzf7eOu9yhKBDHe8T2YwJOQD1T5IM="
-      user-actor-image="">
-    </df-messenger-chat>
+    chat-icon="off">
     <df-messenger-chat-bubble
       chat-title="DF AI Avatar">
     </df-messenger-chat-bubble>
   </df-messenger>
   <script>
-    // Wait for Dialogflow Messenger script to load
     function checkMessengerLoaded() {
       const scriptErrorDiv = document.getElementById('script-error');
       const dfMessenger = document.querySelector('df-messenger');
@@ -142,7 +138,6 @@
         return;
       }
 
-      // Ensure chat window is hidden initially and toggled by custom bubble
       const chatBubble = dfMessenger.querySelector('df-messenger-chat-bubble');
       const chatWrapper = dfMessenger.shadowRoot.querySelector('div[part="chat-wrapper"]');
 
@@ -150,23 +145,25 @@
         // Hide chat window initially
         chatWrapper.style.display = 'none';
 
-        // Toggle chat window when custom bubble is clicked
+        // Toggle chat window and log state
         chatBubble.addEventListener('click', () => {
           const isVisible = chatWrapper.style.display === 'block';
           chatWrapper.style.display = isVisible ? 'none' : 'block';
+          console.log('Chat window toggled, now ' + (isVisible ? 'hidden' : 'visible'));
         });
 
-        // Prevent default bubble from interfering (optional backup)
-        const defaultBubble = dfMessenger.shadowRoot.querySelector('df-messenger-chat-bubble');
-        if (defaultBubble && defaultBubble !== chatBubble) {
-          defaultBubble.style.display = 'none';
-        }
+        // Check for bot image and initial message after a short delay
+        setTimeout(() => {
+          const botImage = chatWrapper.querySelector('img[alt="Bot Avatar"]');
+          const botMessage = chatWrapper.querySelector('div[part="message-bot"]');
+          console.log('Bot image found:', !!botImage);
+          console.log('Bot message found:', !!botMessage);
+        }, 1000);
       } else {
         console.error('Chat bubble or chat wrapper not found in df-messenger.');
       }
     }
 
-    // Listen for script load or error
     const script = document.querySelector('script[src*="df-messenger.js"]');
     if (script) {
       script.addEventListener('load', checkMessengerLoaded);
@@ -179,7 +176,6 @@
       document.getElementById('script-error').style.display = 'block';
     }
 
-    // Fallback: Check after a timeout
     setTimeout(checkMessengerLoaded, 5000);
   </script>
 </body>
