--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
     max-query-length="-1"
     chat-icon="off">
     <df-messenger-chat-bubble
-      chat-title="DF AI Avatar">
+      chat-title="DF AI Avatar"
+      bot-writing-text="DF is typing.."
+      bot-actor-image="https://media.gettyimages.com/id/1479744575/vector/robot-artificial-intelligence-avatar-icon-profile-diverse-bot-face-for-chatbot-and-social.jpg?s=1024x1024&w=gi&k=20&c=HJ6ZJ__0AZSqU4Nzf7eOu9yhKBDHe8T2YwJOQD1T5IM="
+      user-actor-image="">
     </df-messenger-chat-bubble>
   </df-messenger>
   <script>
